  https://github.com/ocaml/graphics
  (Jérémie Dimino, review by Nicolas Ojeda Bar, Xavier Leroy and
   Sébastien Hinderer)

### Manual and documentation:

- #7584, #8538: Document .cmt* files in the "overview" of ocaml{c,opt}
  (Oxana Kostikova, rewiew by Florian Angeletti)

- #8515: manual, precise constraints on reexported types
  (Florian Angeletti, review by Gabriel Scherer)

### Bug fixes:

- #7156, #8594: make top level use custom printers if they are available
  (Andrew Litteken, report by Martin Jambon, review by Nicolás Ojeda Bär,
   Thomas Refis, Armaël Guéneau, Gabriel Scherer, David Allsopp)
- #3249: ocamlmklib should reject .cmxa files
  (Xavier Leroy)
- #7937, #2287: fix uncaught Unify exception when looking for type
  declaration
  (Florian Angeletti, review by Jacques Garrigue)

- GPR#2296: Fix parsing of hexadecimal floats with underscores in the exponent.
  (Hugo Heuzard and Xavier Leroy, review by Gabriel Scherer)

- #8610, #8613: toplevel printing, consistent deduplicated name for types
  (Florian Angeletti, review by Thomas Refis and Gabriel Scherer,
   reported by Xavier Clerc)

- #8635, #8636: Fix a bad side-effect of the -allow-approx option of
  ocamldep. It used to turn some errors into successes
  (Jérémie Dimino)

OCaml 4.08.0
------------

### Language features:

- #6422, #7083, #305, #1568: Allow "exception" under or-patterns
  (Thomas Refis, with help and review from Alain Frisch, Gabriel Scherer, Jeremy
  Yallop, Leo White and Luc Maranget)

- #1506, #2147, #2166, #2167: Extended open to arbitrary module
  expression in structures and to applicative paths in signatures
  (Runhang Li, review by Alain Frisch, Florian Angeletti, Jeremy Yallop,
  Leo White and Thomas Refis)

- #1705: Allow @@attributes on exceptions.
  (Hugo Heuzard, review by Gabriel Radanne and Thomas Refis)

- #1804: New notion of "alerts" that generalizes the deprecated warning
  (Alain Frisch, review by Leo White and Damien Doligez)
